style.css
body {
    margin: 0;
    overflow: hidden; /* Hide scrollbars */
}
canvas {
    display: block; /* Remove extra space below canvas */
}

#blocker {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.5);
}

#instructions {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 14px;
    cursor: pointer;
    color: #ffffff;
}

#crosshair {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 20px;
    height: 20px;
    margin-top: -10px;
    margin-left: -10px;
    border-top: 2px solid white;
    border-bottom: 2px solid white;
    border-left: 2px solid white;
    border-right: 2px solid white;
    border-radius: 50%;
    pointer-events: none; /* So it doesn't interfere with clicks */
    display: none; /* Only show when locked */
}

